# bday-reminder

./: .eslintrc.json  .gitignore  README.md  cloudformation.yml  jest.config.js  package-lock.json  package.json
__mocks__/aws-sdk/clients/: dynamodb.js  sns.js
conf/: app.js
deploy/: kustomization.yaml  namespace.yaml
res/: mail.md
src/: index.js
src/api/: Cargo.toml  Dockerfile  package.json  tsconfig.json
src/api/deploy/: deployment.yaml  ingress.yaml
src/api/src/: app.d.ts  error.rs  index.js  main.js  main.rs  person.js
src/api/src/birthdays/: handlers.rs  storage.rs
src/api/src/database/: database.js  person.js
src/api/src/graphql/: birthday.js  node.js  schema.js
src/app-web/: .env  .env.production  Dockerfile  index.html  package.json
src/app-web/deploy/: deployment.yaml  ingress.yaml  service.yaml
src/app-web/src/: App.module.css  App.tsx  BirthdayUpcoming.module.css  BirthdayUpcoming.tsx  PersonEdit.module.css  PersonEdit.tsx  PersonList.module.css  PersonList.tsx  main.css  main.tsx
src/commands/: add.js  remove.js  run.js
src/context/: app.js  fs.js  job.js  mail.js  markdown.js  reminder.js  storage.js
src/handlers/BirthdayAdder/: handler.js  handler.test.js  index.js  putBirthday.js  putBirthday.test.js
src/handlers/BirthdayChecker/: getBirthdays.js  getBirthdays.test.js  handler.js  handler.test.js  index.js  index.test.js  sendBirthdayNotification.js  sendBirthdayNotification.test.js
src/reminder/: .env.example  Cargo.toml  Dockerfile  package.json
src/util/: context-loader.js
test/: setup.js
(+11 files in other folders)
